Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4737

Qt does not integrate well with XFCE

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.0
    • 4.5.0
    • GUI: Look'n'Feel
    • None
    • 9956ef7fd66f5a0a2ebf9b810e5f6ffe3649cf20

      While it integrates nicely on the GNOME platform using themes and icons, on XFCE which is essentially
      based on the same libraries it shows up in windows style by default. This should instead use
      QGtkStyle and the same icon loading code as GNOME.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bachewii Jens
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes