Add support for XFCE desktop integration

XFCE essentially depends on gnome libraries and can use the
same integration features we provide for GNOME. Hence we
simply treat it as the GNOME desktop environment internally.
We can now also use the DESKTOP_SESSION to reliably detect
desktop environments since it has been properly standardized,
instead of relying on window manager hacks for anything but
a fallback.

Task-number: QTBUG-4737
Reviewed-by: bhughes